# fjs

./: .gitignore  .pubignore  CHANGELOG.md  README.md  README_zh.md  analysis_options.yaml  build.yaml  pubspec.yaml
.cargo/: audit.toml
.github/workflows/: build-all-platforms.yml  build.yml  precompile-binaries.yml  publish-pub.yml
.run/: build-apk-arm64.run.xml  build-apk.run.xml  build_runner.run.xml
cargokit/build_tool/lib/src/: android_environment.dart  artifacts_provider.dart  build_tool.dart  builder.dart  composite_artifacts.dart  crate_hash.dart  environment.dart  options.dart  precompile_binaries.dart  precompiled_asset_store.dart  precompiled_generation.dart  target.dart  verify_binaries.dart
cargokit/build_tool/test/: android_environment_test.dart  artifacts_provider_test.dart  builder_test.dart  composite_artifacts_test.dart  crate_hash_test.dart  options_test.dart  precompiled_asset_store_test.dart  precompiled_generation_test.dart  precompiled_publisher_test.dart
cargokit/build_tool/test/support/: precompiled_asset_store_worker.dart
cargokit/gradle/: plugin.gradle
darwin/: fjs.podspec
darwin/fjs/: Package.swift
example/: pubspec.yaml
example/android/app/: build.gradle
example/cockpit/: main.dart
example/integration_test/: runtime_driver_test.dart  simple_test.dart  smoke_test.dart
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart  test_js_examples.dart  test_load_verification.dart
example/lib/app/: app.dart  bootstrap.dart  home_screen.dart  router.dart  theme.dart
example/lib/screens/: api_overview_screen.dart  engine_api_screen.dart  error_api_screen.dart  example_screen.dart  js_actions_test_screen.dart  playground_screen.dart  runtime_api_screen.dart  source_api_screen.dart
example/lib/services/: fjs_service.dart  js_actions_service.dart  js_examples_service.dart
example/lib/widgets/: code_editor_widget.dart  responsive_layout.dart
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/tool/: ci_cockpit_verify.dart
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
ios/: fjs.podspec
lib/: fjs.dart
lib/src/: engine.dart
lib/src/frb/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/frb/api/: bytecode.dart  engine.dart  engine.freezed.dart  error.dart  js.dart  js.freezed.dart  runtime.dart  source.dart  source.freezed.dart  value.dart  value.freezed.dart
libfjs/: Cargo.toml  cargokit.yaml
libfjs/.cargo/: config.toml
libfjs/src/: bytecode_support.rs  frb_generated.rs  lib.rs
libfjs/src/api/: bytecode.rs  engine.rs  error.rs  js.rs  mod.rs  module.rs  runtime.rs  source.rs  value.rs
libfjs/src/runtime/: driver.rs  error_sink.rs  executor.rs  job_error.rs  mod.rs  shutdown.rs  teardown.rs
libfjs/src/tests/: api_surface_tests.rs  async_tests.rs  boundary_tests.rs  engine_tests.rs  llrt_module_tests.rs  memory_tests.rs  mod.rs  module_tests.rs  runtime_architecture_tests.rs  runtime_tests.rs  stack_tests.rs  value_tests.rs
macos/: fjs.podspec
test/tool/: check_frb_content_hash_test.dart
tool/: assemble_fjs_xcframework.sh  build_fjs_xcframework.sh  check_darwin_package_support.sh  check_frb_codegen.sh  check_frb_content_hash.dart  check_minimum_flutter_compatibility.sh  prepare_darwin_release.sh  stage_pub_release.sh  verify_pub_stage.sh
